@@ -120,6 +120,8 @@ class ProgramNotificationServiceTest extends DhisConvenienceTest {
 
   @Mock private ProgramNotificationTemplateService notificationTemplateService;
 
+  @Mock private ProgramNotificationInstanceService notificationInstanceService;
+
   private NotificationTemplateMapper notificationTemplateMapper = new NotificationTemplateMapper();
 
   private DefaultProgramNotificationService programNotificationService;
@@ -186,7 +188,7 @@ class ProgramNotificationServiceTest extends DhisConvenienceTest {
 
   private ProgramNotificationTemplate programNotificationTemplateForToday;
 
-  private ProgramNotificationInstance programNotificationInstaceForToday;
+  private ProgramNotificationInstance programNotificationInstanceForToday;
 
   @BeforeEach
   public void initTest() {
@@ -197,6 +199,7 @@ class ProgramNotificationServiceTest extends DhisConvenienceTest {
             this.programInstanceStore,
             this.programStageInstanceStore,
             this.manager,
+            notificationInstanceService,
             this.programNotificationRenderer,
             this.programStageNotificationRenderer,
             notificationTemplateService,
@@ -658,8 +661,8 @@ class ProgramNotificationServiceTest extends DhisConvenienceTest {
               return new BatchResponseStatus(Collections.emptyList());
             });
 
-    when(manager.getAll(ProgramNotificationInstance.class))
-        .thenReturn(Collections.singletonList(programNotificationInstaceForToday));
+    when(notificationInstanceService.getProgramNotificationInstances(any()))
+        .thenReturn(List.of(programNotificationInstanceForToday));
 
     when(programNotificationRenderer.render(
             any(ProgramInstance.class), any(NotificationTemplate.class)))
@@ -705,13 +708,13 @@ class ProgramNotificationServiceTest extends DhisConvenienceTest {
             ProgramNotificationRecipient.TRACKED_ENTITY_INSTANCE,
             today);
 
-    programNotificationInstaceForToday = new ProgramNotificationInstance();
-    programNotificationInstaceForToday.setProgramNotificationTemplateSnapshot(
+    programNotificationInstanceForToday = new ProgramNotificationInstance();
+    programNotificationInstanceForToday.setProgramNotificationTemplateSnapshot(
         notificationTemplateMapper.toProgramNotificationTemplateSnapshot(
             programNotificationTemplateForToday));
-    programNotificationInstaceForToday.setName(programNotificationTemplateForToday.getName());
-    programNotificationInstaceForToday.setAutoFields();
-    programNotificationInstaceForToday.setScheduledAt(today);
+    programNotificationInstanceForToday.setName(programNotificationTemplateForToday.getName());
+    programNotificationInstanceForToday.setAutoFields();
+    programNotificationInstanceForToday.setScheduledAt(today);
 
     root = createOrganisationUnit('R');
     lvlOneLeft = createOrganisationUnit('1');
@@ -825,7 +828,7 @@ class ProgramNotificationServiceTest extends DhisConvenienceTest {
     programStageInstances.add(programStageInstance);
     programInstances.add(programInstance);
 
-    programNotificationInstaceForToday.setProgramInstance(programInstance);
+    programNotificationInstanceForToday.setProgramInstance(programInstance);
 
     notificationMessage = new NotificationMessage(SUBJECT, MESSAGE);
   }
